--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 default-run = "latgraph"
 
 [dependencies]
-clap = { version = "2.33.3", optional = true }
+clap = "2.33.3"
 conrod_core = "0.71.0"
 conrod_glium = "0.71.0"
 conrod_winit = "0.71.0"
@@ -19,7 +19,7 @@ tokio = { version = "1.4.0", optional = true, features = ["rt", "net", "time", "
 winit = "0.23"
 
 [features]
-test-server = ["clap", "rand", "rand_distr", "tokio"]
+test-server = ["rand", "rand_distr", "tokio"]
 
 [[bin]]
 name = "test-echo-server"
