--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ conrod_glium = "0.71.0"
 conrod_winit = "0.71.0"
 env_logger = "0.8.3"
 glium = "0.28.0"
+image = "0.23.14"
 log = { version = "0.4.14" }
 rand = { version = "0.8.3", optional = true }
 rand_distr = { version = "0.4.0", optional = true }
