--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rand = { version = "0.8.3", optional = true }
 rand_distr = { version = "0.4.0", optional = true }
 serde = { version = "1.0.125", optional = true }
 serde_derive = { version = "1.0.125", optional = true }
+thread-priority = "0.2.1"
 tokio = { version = "1.4.0", optional = true, features = ["rt", "net", "time", "macros"] }
 toml = { version = "0.5.8", optional = true }
 winit = "0.23"
